// Vitest Snapshot v1

exports[`getRoutes 1`] = `
[
  {
    "children": [],
    "file": "routes/one.two.three.js",
    "id": "routes/one.two.three",
    "index": false,
    "path": "one/two/three",
  },
  {
    "children": [
      {
        "children": [],
        "file": "routes/demos/params/index.js",
        "id": "routes/demos/params/index",
        "index": true,
        "path": "",
      },
      {
        "children": [],
        "file": "routes/demos/params/$id.js",
        "id": "routes/demos/params/$id",
        "index": false,
        "path": ":id",
      },
    ],
    "file": "routes/demos/params.js",
    "id": "routes/demos/params",
    "index": false,
    "path": "demos/params",
  },
  {
    "children": [
      {
        "children": [],
        "file": "routes/demos/about/index.js",
        "id": "routes/demos/about/index",
        "index": true,
        "path": "",
      },
      {
        "children": [],
        "file": "routes/demos/about/whoa.js",
        "id": "routes/demos/about/whoa",
        "index": false,
        "path": "whoa",
      },
      {
        "children": [],
        "file": "routes/demos/about/404.js",
        "id": "routes/demos/about/404",
        "index": false,
        "path": "*",
      },
    ],
    "file": "routes/demos/about.js",
    "id": "routes/demos/about",
    "index": false,
    "path": "demos/about",
  },
  {
    "children": [],
    "file": "routes/index.js",
    "id": "routes/index",
    "index": true,
    "path": "",
  },
  {
    "children": [],
    "file": "routes/404.js",
    "id": "routes/404",
    "index": false,
    "path": "*",
  },
]
`;

exports[`getRoutes with manual routes specified by options 1`] = `
[
  {
    "children": [],
    "file": "routes/one.two.three.js",
    "id": "routes/one.two.three",
    "index": false,
    "path": "one/two/three",
  },
  {
    "children": [
      {
        "children": [],
        "file": "routes/demos/params/index.js",
        "id": "routes/demos/params/index",
        "index": true,
        "path": "",
      },
      {
        "children": [],
        "file": "routes/demos/params/$id.js",
        "id": "routes/demos/params/$id",
        "index": false,
        "path": ":id",
      },
    ],
    "file": "routes/demos/params.js",
    "id": "routes/demos/params",
    "index": false,
    "path": "demos/params",
  },
  {
    "children": [
      {
        "children": [],
        "file": "routes/demos/about/index.js",
        "id": "routes/demos/about/index",
        "index": true,
        "path": "",
      },
      {
        "children": [],
        "file": "routes/demos/about/404.js",
        "id": "routes/demos/about/404",
        "index": false,
        "path": "*",
      },
    ],
    "file": "routes/demos/about.js",
    "id": "routes/demos/about",
    "index": false,
    "path": "demos/about",
  },
  {
    "children": [],
    "file": "routes/demos/about/whoa.js",
    "id": "routes/demos/about/whoa",
    "index": false,
    "path": "/foo/bar",
  },
  {
    "children": [],
    "file": "routes/index.js",
    "id": "routes/index",
    "index": true,
    "path": "",
  },
  {
    "children": [],
    "file": "routes/404.js",
    "id": "routes/404",
    "index": false,
    "path": "*",
  },
]
`;
